--- a/p2/confs/ingress.yaml
+++ b/p2/confs/ingress.yaml
@@ -8,7 +8,7 @@ spec:
   - host: app1.com
     http:
       paths:
-      - path: /
+      - path: "/"
         pathType: Prefix
         backend:
           service:
@@ -18,7 +18,7 @@ spec:
   - host: app2.com
     http:
       paths:
-      - path: /
+      - path: "/"
         pathType: Prefix
         backend:
           service:
