--- a/bonus/Vagrantfile
+++ b/bonus/Vagrantfile
@@ -3,13 +3,17 @@ Vagrant.configure("2") do |config|
     config.vm.box = "bento/ubuntu-22.04"
     config.vm.hostname = "bonus"
     config.vm.network "private_network", ip: "192.168.56.10"
+    config.vm.network "forwarded_port", guest: 8080, host: 8080
+    config.vm.network "forwarded_port", guest: 8888, host: 8888
 
     config.vm.provider "virtualbox" do |vb|
-        vb.memory = 2048
-        vb.cpus = 2
+        vb.memory = 4096
+        vb.cpus = 4
         vb.customize ["modifyvm", :id, "--name", "bonus"]
     end
 
     config.vm.provision "shell", path: "./scripts/bonus.sh"
+    config.vm.provision "shell", path: "./scripts/deploy-cluster.sh"
+
 
 end
