--- a/p2/confs/app-one.yaml
+++ b/p2/confs/app-one.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: app-one
-        image: niboukha/hello-kubernetes:arm64-v2
+        image: paulbouwer/hello-kubernetes:1.10
         ports:
         - containerPort: 8888
         env:
