--- a/bonus/Vagrantfile
+++ b/bonus/Vagrantfile
@@ -5,15 +5,14 @@ Vagrant.configure("2") do |config|
     config.vm.network "private_network", ip: "192.168.56.10"
     config.vm.network "forwarded_port", guest: 8080, host: 8080
     config.vm.network "forwarded_port", guest: 8888, host: 8888
+    config.vm.network "forwarded_port", guest: 8181, host: 8083
 
     config.vm.provider "virtualbox" do |vb|
-        vb.memory = 4096
+        vb.memory = 8192
         vb.cpus = 4
         vb.customize ["modifyvm", :id, "--name", "bonus"]
     end
 
     config.vm.provision "shell", path: "./scripts/deploy-cluster.sh"
-    config.vm.provision "shell", path: "./scripts/deploy-gitlab.sh"
-
 
 end
