--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -1,18 +1,16 @@
 Vagrant.configure("2") do |config|
 
-    config.vm.box = "bento/ubuntu-22.04"
-        config.vm.define "niboukhaS" do |control|
-        config.vm.hostname = "niboukhaS"
-        config.vm.network "private_network", ip: "192.168.56.110"
+  config.vm.box = "ubuntu/jammy64"
+  config.vm.synced_folder ".", "/vagrant"
+  config.vm.hostname = "gkaribS"
+  config.vm.network "private_network", ip: "192.168.56.110"
 
-        config.vm.provider "virtualbox" do |vb|
-            vb.memory = 1024
-            vb.cpus = 1
-            vb.customize ["modifyvm", :id, "--name", "niboukhaS"]
-        end
+  config.vm.provider "virtualbox" do |vb|
+    vb.memory = 2048
+    vb.cpus = 2
+    vb.name = "gkaribS"
 
-        config.vm.provision "shell", path: "./scripts/server.sh"
-        config.vm.provision "shell", path: "./scripts/setup.sh"
-    end
+  end
 
+  config.vm.provision "shell", path: "scripts/ServerSetup.sh"
 end
